# SendMeUDP

sendmeudp/: LICENSE.txt  README.md  pyproject.toml
sendmeudp/src/sendmeudp/: __about__.py  __init__.py  receiver.py  sender.py
sendmeudp/tests/: test_receiver.py  test_sender.py
